--- a/uml-webapp/package.json
+++ b/uml-webapp/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "axios": "^1.12.2",
+    "jointjs": "^3.7.5",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "jointjs": "^3.7.5",
+    "react-window": "^2.1.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
@@ -25,9 +27,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "concurrently": "^9.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
