--- a/uml-webapp/package.json
+++ b/uml-webapp/package.json
@@ -17,6 +17,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.1.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
