--- a/uml-webapp/package.json
+++ b/uml-webapp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/jszip": "^3.4.0",
     "@types/react-window": "^1.8.8",
     "axios": "^1.12.2",
     "groq-sdk": "^0.32.0",
