--- a/uml-webapp/package.json
+++ b/uml-webapp/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "groq-sdk": "^0.32.0",
     "jointjs": "^3.7.5",
+    "jspdf": "^3.0.3",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
     "react": "19.1.0",
