--- a/uml-webapp/env.example
+++ b/uml-webapp/env.example
@@ -3,10 +3,13 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/uml?retryWrites=
 
 # Socket.IO Configuration
 SOCKET_PORT=3001
+NEXT_PUBLIC_SOCKET_URL=https://tu-socket-server.onrender.com
 
-# Next.js Configuration
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-here
+# Frontend URL (para CORS)
+FRONTEND_URL=https://tu-app.onrender.com
 
 # Groq AI Configuration (if using chatbot)
 GROQ_API_KEY=your-groq-api-key-here
+
+# Render Configuration
+NODE_ENV=production
