fixed url onrender

--- a/uml-webapp/env.example
+++ b/uml-webapp/env.example
@@ -3,10 +3,10 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/uml?retryWrites=
 
 # Socket.IO Configuration
 SOCKET_PORT=3001
-NEXT_PUBLIC_SOCKET_URL=https://tu-socket-server.onrender.com
+NEXT_PUBLIC_SOCKET_URL=https://uml-socket-server.onrender.com
 
 # Frontend URL (para CORS)
-FRONTEND_URL=https://tu-app.onrender.com
+FRONTEND_URL=https://uml-webapp.onrender.com
 
 # Groq AI Configuration (if using chatbot)
 GROQ_API_KEY=your-groq-api-key-here
